08/12/2015 - Menu, animations and other sections

--- a/dev/css/style.scss
+++ b/dev/css/style.scss
@@ -16,6 +16,7 @@ $fontFamily: 'Lato', sans-serif;
 \*--------------------*/
 
 @import "partials/font";
+@import "partials/animations";
 @import "partials/base";
 @import "partials/layout";
 @import "partials/responsive";
