--- a/dev/css/partials/_layout.scss
+++ b/dev/css/partials/_layout.scss
@@ -1,4 +1,177 @@
 /*--------------------*\
+		Loader
+\*--------------------*/
+
+.loader {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 9998;
+	background-color: $color1;
+}
+
+.sk-folding-cube {
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	text-align: center;
+	transform: translate3d(-50%, -50%, 0);
+
+  	margin: 20px auto;
+  	width: 60px;
+  	height: 60px;
+    transform: rotateZ(45deg);
+}
+
+.sk-folding-cube .sk-cube {
+  	float: left;
+  	width: 50%;
+  	height: 50%;
+  	position: relative;
+    transform: scale(1.1); 
+}
+
+.sk-folding-cube .sk-cube:before {
+  	content: '';
+  	position: absolute;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	background-color: $color4;
+  	animation: sk-foldCubeAngle 2.4s infinite linear both;
+  	transform-origin: 100% 100%;
+}
+
+.sk-folding-cube .sk-cube2 {
+	transform: scale(1.1) rotateZ(90deg);
+}
+
+.sk-folding-cube .sk-cube3 {
+	transform: scale(1.1) rotateZ(180deg);
+}
+
+.sk-folding-cube .sk-cube4 {
+	transform: scale(1.1) rotateZ(270deg);
+}
+
+.sk-folding-cube .sk-cube2:before {
+	animation-delay: 0.3s;
+}
+
+.sk-folding-cube .sk-cube3:before {
+	animation-delay: 0.6s; 
+}
+
+.sk-folding-cube .sk-cube4:before {
+	animation-delay: 0.9s;
+}
+
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  } 
+}
+
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  }
+}
+
+
+/*--------------------*\
+		Menu Panel
+\*--------------------*/
+
+.menu {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	width: 300px;
+	z-index: 9999;
+	background-color: $color1;
+	box-shadow: -2px 2px 20px rgba(#000, 0.5);
+	transform: translateX(300px);
+	transition: transform 0.5s;
+
+	ul {
+		position: absolute;
+		top: 10vh;
+		left: 0;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		//text-align: center;
+	}
+
+	li {
+		display: block;
+		width: 100%;
+		height: 10vh;
+		line-height: 10vh;
+		margin-bottom: 10px;
+		padding-left: 100px;
+		opacity: 0;
+		transform: translateY(0);
+		transition: all 0.3s;
+
+		&:hover {
+			//cursor: pointer;
+			background-color: $color2;
+		}
+
+		i {
+			margin-right: 10px;
+		}
+	}
+}
+
+.menu__close {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	padding: 5px 10px;
+	border: 1px solid transparent; // To avoid icon movement on hover
+	transition: transform 0.5s;
+
+	&:hover {
+		border: 1px solid $fontColor;
+		cursor: pointer;
+	}
+}
+
+.menu__blocker {
+	position: fixed;
+	display: none;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 9998;
+	background-color: rgba(#000, 0.7);
+}
+
+
+/*--------------------*\
 		Header
 \*--------------------*/
 
@@ -36,6 +209,7 @@ nav {
 	z-index: 3;
 	height: 100px;
 	width: 100%;
+	transition: all 0.5s;
 }
 
 .menu-btn {
@@ -43,7 +217,7 @@ nav {
 	top: 50%;
 	right: 20px;
 	padding: 10px 20px;
-	border: 1px solid transparent;
+	border: 1px solid transparent;	// To avoid icon movement on hover
 	font-weight: 300;
 	transition: border-color 0.3s;
 	transform: translateY(-50%);
@@ -60,7 +234,7 @@ nav {
 
 .logo {
 	position: absolute;
-	top: 50%;
+	top: 45%;
 	left: 50px;
 	margin: 0;
 	font-size: 3em;
@@ -105,18 +279,14 @@ nav {
 	}
 }
 
-section {
+
+/*--------------------*\
+		Sections
+\*--------------------*/
+
+section.big {
+	position: relative;
 	min-height: 100vh;
-	background-color: $color1;
-
-	h2 {
-		font-size: 3em;
-	}
-}
-
-.content {
-	padding: 100px 20px;
-	text-align: center;
 
 	h2 {
 		max-width: 50vw;
@@ -127,7 +297,28 @@ section {
 	}
 }
 
-.card {
+.whiteBg {
+	color: $color1;
+	background-color: #ecf0f1;
+
+	h2 {
+		border-bottom: 2px solid #27ae60;
+	}
+}
+
+.content {
+	padding: 100px 20px;
+	text-align: center;
+}
+
+
+// Section Team
+
+// Section Products
+
+// Section Pricing
+
+.pricing__card {
 	display: inline-block;
 	margin: 15px;
 	padding: 15px;
@@ -181,7 +372,28 @@ section {
 	}
 
 	&:hover {
-		//cursor: pointer;
 		transform: scale(1.1);
+	}
+}
+
+
+// Section Testimonial
+
+.quote {
+	font-weight: 700;
+	color: #ccc;
+	font-family: 'Arial', sans-serif;
+
+	p {
+		margin: 0;
+		padding: 0;
+		font-size: 5em;
+	}
+
+	blockquote {
+		width: 50%;
+		margin: -30px auto 0;
+		padding: 0;
+		font-size: 2em;
 	}
 }
