--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -6,6 +6,10 @@
 \*--------------------*/
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+.fadeInDown {
+  opacity: 1 !important;
+  transform: translateY(40px) !important; }
+
 * {
   box-sizing: border-box; }
 
@@ -19,6 +23,143 @@ body {
 a {
   color: inherit;
   text-decoration: none; }
+
+/*--------------------*\
+		Loader
+\*--------------------*/
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9998;
+  background-color: #152A38; }
+
+.sk-folding-cube {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  text-align: center;
+  transform: translate3d(-50%, -50%, 0);
+  margin: 20px auto;
+  width: 60px;
+  height: 60px;
+  transform: rotateZ(45deg); }
+
+.sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  transform: scale(1.1); }
+
+.sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #D1D4C9;
+  animation: sk-foldCubeAngle 2.4s infinite linear both;
+  transform-origin: 100% 100%; }
+
+.sk-folding-cube .sk-cube2 {
+  transform: scale(1.1) rotateZ(90deg); }
+
+.sk-folding-cube .sk-cube3 {
+  transform: scale(1.1) rotateZ(180deg); }
+
+.sk-folding-cube .sk-cube4 {
+  transform: scale(1.1) rotateZ(270deg); }
+
+.sk-folding-cube .sk-cube2:before {
+  animation-delay: 0.3s; }
+
+.sk-folding-cube .sk-cube3:before {
+  animation-delay: 0.6s; }
+
+.sk-folding-cube .sk-cube4:before {
+  animation-delay: 0.9s; }
+
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; }
+  25%, 75% {
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1; }
+  90%, 100% {
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0; } }
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; }
+  25%, 75% {
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1; }
+  90%, 100% {
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0; } }
+/*--------------------*\
+		Menu Panel
+\*--------------------*/
+.menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  z-index: 9999;
+  background-color: #152A38;
+  box-shadow: -2px 2px 20px rgba(0, 0, 0, 0.5);
+  transform: translateX(300px);
+  transition: transform 0.5s; }
+  .menu ul {
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  .menu li {
+    display: block;
+    width: 100%;
+    height: 10vh;
+    line-height: 10vh;
+    margin-bottom: 10px;
+    padding-left: 100px;
+    opacity: 0;
+    transform: translateY(0);
+    transition: all 0.3s; }
+    .menu li:hover {
+      background-color: #29435C; }
+    .menu li i {
+      margin-right: 10px; }
+
+.menu__close {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding: 5px 10px;
+  border: 1px solid transparent;
+  transition: transform 0.5s; }
+  .menu__close:hover {
+    border: 1px solid #D1D4C9;
+    cursor: pointer; }
+
+.menu__blocker {
+  position: fixed;
+  display: none;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9998;
+  background-color: rgba(0, 0, 0, 0.7); }
 
 /*--------------------*\
 		Header
@@ -50,7 +191,8 @@ nav {
   top: 0;
   z-index: 3;
   height: 100px;
-  width: 100%; }
+  width: 100%;
+  transition: all 0.5s; }
 
 .menu-btn {
   position: absolute;
@@ -69,7 +211,7 @@ nav {
 
 .logo {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50px;
   margin: 0;
   font-size: 3em;
@@ -103,23 +245,30 @@ nav {
   .scroll:hover {
     cursor: pointer; }
 
-section {
-  min-height: 100vh;
-  background-color: #152A38; }
-  section h2 {
-    font-size: 3em; }
-
-.content {
-  padding: 100px 20px;
-  text-align: center; }
-  .content h2 {
+/*--------------------*\
+		Sections
+\*--------------------*/
+section.big {
+  position: relative;
+  min-height: 100vh; }
+  section.big h2 {
     max-width: 50vw;
     margin: 0 auto 80px;
     padding-bottom: 20px;
     font-size: 3.5em;
     border-bottom: 2px solid #556E53; }
 
-.card {
+.whiteBg {
+  color: #152A38;
+  background-color: #ecf0f1; }
+  .whiteBg h2 {
+    border-bottom: 2px solid #27ae60; }
+
+.content {
+  padding: 100px 20px;
+  text-align: center; }
+
+.pricing__card {
   display: inline-block;
   margin: 15px;
   padding: 15px;
@@ -128,26 +277,26 @@ section {
   color: #D1D4C9;
   background-color: #152A38;
   transition: transform 0.3s; }
-  .card i {
+  .pricing__card i {
     margin: 20px 0; }
-  .card h4 {
+  .pricing__card h4 {
     color: #27ae60; }
-  .card .currency {
+  .pricing__card .currency {
     font-size: 0.5em;
     vertical-align: super;
     font-weight: normal; }
-  .card h4 {
+  .pricing__card h4 {
     margin: 20px 0;
     font-size: 2em; }
-    .card h4 span {
+    .pricing__card h4 span {
       font-size: 0.5em;
       font-weight: 300; }
-  .card h3 {
+  .pricing__card h3 {
     margin: 20px 0 0;
     font-size: 2em; }
-  .card p {
+  .pricing__card p {
     margin: 0 0 30px; }
-  .card button {
+  .pricing__card button {
     width: auto;
     padding: 10px 20px;
     border: none;
@@ -155,5 +304,19 @@ section {
     background: #27ae60;
     font-size: 1.2em;
     text-shadow: 1px 1px 2px #1e8449; }
-  .card:hover {
+  .pricing__card:hover {
     transform: scale(1.1); }
+
+.quote {
+  font-weight: 700;
+  color: #ccc;
+  font-family: 'Arial', sans-serif; }
+  .quote p {
+    margin: 0;
+    padding: 0;
+    font-size: 5em; }
+  .quote blockquote {
+    width: 50%;
+    margin: -30px auto 0;
+    padding: 0;
+    font-size: 2em; }
