--- a/dev/css/style.scss
+++ b/dev/css/style.scss
@@ -1,6 +1,4 @@
-/*--------------------*\
-		Variables
-\*--------------------*/
+// Variables
 
 $fontSize: 62.5%; // = 10px
 $color1: #152A38;
@@ -11,9 +9,7 @@ $fontColor: $color4;
 $fontFamily: 'Lato', sans-serif;
 
 
-/*--------------------*\
-		Imports
-\*--------------------*/
+// Imports
 
 @import "partials/font";
 @import "partials/animations";
