--- a/dev/css/partials/_base.scss
+++ b/dev/css/partials/_base.scss
@@ -16,3 +16,23 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
+
+button {
+	border: none;
+	border-radius: 5px;
+	background: #27ae60;
+	color: #fff;
+	text-shadow: 1px 1px 2px darken(#27ae60, 10%);
+
+	&:hover {
+		background-color: darken(#27ae60, 10%);
+	}
+}
+
+input {
+	padding-left: 20px;
+}
+
+input, button {
+	outline: none;
+}
