--- a/dev/css/partials/_layout.scss
+++ b/dev/css/partials/_layout.scss
@@ -100,7 +100,7 @@
 		Menu Panel
 \*--------------------*/
 
-.menu {
+.menu__panel {
 	position: fixed;
 	top: 0;
 	bottom: 0;
@@ -112,35 +112,38 @@
 	user-select: none;
 	transform: translateX(300px);
 	transition: transform 0.5s;
+}
 
-	ul {
-		position: absolute;
-		top: 10vh;
-		left: 0;
-		width: 100%;
-		margin: 0;
-		padding: 0;
-		list-style: none;
+.menu {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-content: center;
+	top: 5vh;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.menu-item {
+	width: 100%;
+	height: 10vh;
+	line-height: 10vh;
+	padding-left: 100px;
+	opacity: 0;
+	transform: translateY(0);
+	transition: all 0.3s;
+
+	&:hover {
+		background-color: $color2;
 	}
 
-	li {
-		display: block;
-		width: 100%;
-		height: 10vh;
-		line-height: 10vh;
-		margin-bottom: 10px;
-		padding-left: 100px;
-		opacity: 0;
-		transform: translateY(0);
-		transition: all 0.3s;
-
-		&:hover {
-			background-color: $color2;
-		}
-
-		i {
-			margin-right: 10px;
-		}
+	i {
+		margin-right: 10px;
 	}
 }
 
@@ -393,15 +396,7 @@ section.big {
 	button {
 		width: auto;
 		padding: 10px 20px;
-		border: none;
-		border-radius: 5px;
-		background: #27ae60;
 		font-size: 1.2em;
-		text-shadow: 1px 1px 2px darken(#27ae60, 10%);
-
-		&:hover {
-			background-color: darken(#27ae60, 10%);
-		}
 	}
 
 	&:hover {
@@ -468,32 +463,26 @@ footer {
 }
 
 .newsletter__form {
-	height: 50px;
-	overflow: hidden;
-	border-radius: 10px;
 
 	input, button {
-		width: 200px;
-		height: 100%;
+		height: 50px;
 		margin: 0;
-		float: left;
+		border: none;
+		font-weight: 300;
 	}
 
 	input {
-		padding-left: 20px;
-		font-weight: 300;
+		width: 200px;
 		font-size: 1.2em;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 5px;
 	}
 
 	button {
 		width: 50px;
-		margin: 0;
-		border: none;
-		border-top-right-radius: 10px;
-		border-bottom-right-radius: 10px;
-		color: #fff;
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
 		font-size: 2em;
-		background-color: #27ae60;
 	}
 }
 
