--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -27,6 +27,21 @@ a {
   color: inherit;
   text-decoration: none; }
 
+button {
+  border: none;
+  border-radius: 5px;
+  background: #27ae60;
+  color: #fff;
+  text-shadow: 1px 1px 2px #1e8449; }
+  button:hover {
+    background-color: #1e8449; }
+
+input {
+  padding-left: 20px; }
+
+input, button {
+  outline: none; }
+
 /*--------------------*\
 		Loader
 \*--------------------*/
@@ -109,7 +124,7 @@ a {
 /*--------------------*\
 		Menu Panel
 \*--------------------*/
-.menu {
+.menu__panel {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -121,28 +136,33 @@ a {
   user-select: none;
   transform: translateX(300px);
   transition: transform 0.5s; }
-  .menu ul {
-    position: absolute;
-    top: 10vh;
-    left: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    list-style: none; }
-  .menu li {
-    display: block;
-    width: 100%;
-    height: 10vh;
-    line-height: 10vh;
-    margin-bottom: 10px;
-    padding-left: 100px;
-    opacity: 0;
-    transform: translateY(0);
-    transition: all 0.3s; }
-    .menu li:hover {
-      background-color: #29435C; }
-    .menu li i {
-      margin-right: 10px; }
+
+.menu {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: center;
+  top: 5vh;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.menu-item {
+  width: 100%;
+  height: 10vh;
+  line-height: 10vh;
+  padding-left: 100px;
+  opacity: 0;
+  transform: translateY(0);
+  transition: all 0.3s; }
+  .menu-item:hover {
+    background-color: #29435C; }
+  .menu-item i {
+    margin-right: 10px; }
 
 .menu__close {
   position: absolute;
@@ -337,13 +357,7 @@ section.big {
   .pricing__card button {
     width: auto;
     padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background: #27ae60;
-    font-size: 1.2em;
-    text-shadow: 1px 1px 2px #1e8449; }
-    .pricing__card button:hover {
-      background-color: #1e8449; }
+    font-size: 1.2em; }
   .pricing__card:hover {
     transform: scale(1.1); }
 
@@ -385,28 +399,21 @@ footer hr {
   padding: 20px;
   text-align: left; }
 
-.newsletter__form {
+.newsletter__form input, .newsletter__form button {
   height: 50px;
-  overflow: hidden;
-  border-radius: 10px; }
-  .newsletter__form input, .newsletter__form button {
-    width: 200px;
-    height: 100%;
-    margin: 0;
-    float: left; }
-  .newsletter__form input {
-    padding-left: 20px;
-    font-weight: 300;
-    font-size: 1.2em; }
-  .newsletter__form button {
-    width: 50px;
-    margin: 0;
-    border: none;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    color: #fff;
-    font-size: 2em;
-    background-color: #27ae60; }
+  margin: 0;
+  border: none;
+  font-weight: 300; }
+.newsletter__form input {
+  width: 200px;
+  font-size: 1.2em;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px; }
+.newsletter__form button {
+  width: 50px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  font-size: 2em; }
 
 .about {
   max-width: 300px; }
